css partially updated

--- a/style.css
+++ b/style.css
@@ -3,22 +3,35 @@
 .navHead{
   text-align: center;
   font-family: 'Zilla Slab Highlight', cursive;
-  padding-bottom: 2%;
   background-color: rgba(213, 186, 218, 0.79);;
-  margin-bottom: 2%;
 
+}
+table{
+  border:3px solid black;
+  background-color: pink;
+}
+th {
+  border:3px solid black;
+  background-color: #8a74b1;
+
+}
+td{
+  border:3px solid black;
+  background-color: #d9bede;
 }
 #salmon{
   width : 30%;
   position: relative;
   left: 1%;
+  top:1%;
 }
 #family{
-  width: 30%;
-  height: 30%;
-  display: block;
-  margin: auto;
   width: 40%;
+  display: block;
+  text-align: center;
+  vertical-align: middle;
+
+
 }
 #buy{
   display: inline-block;
@@ -71,7 +84,6 @@ background-size: cover;
   position: relative;
   left:40%;
   width: 35%;
-  padding-right: 20%;
 }
 .hours{
 bottom: 10%;
@@ -81,8 +93,6 @@ display: inline-block;
 width: 30%;
 }
 .contact{
-  margin-top: 20%
   display: inline-block;
-  margin-left: 40%
   text-align: right;
 }
